chore: index changes

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Andre Luiz Rabello Resume</title>
+    <title>Andre Luiz Rabello</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,35 +55,35 @@
 
     <card>
         <h2>Skills</h2>
-        <chip>C#</chip>
-        <chip>JavaScript</chip>
-        <chip>HTML5</chip>
-        <chip>CSS3</chip>
-        <chip>MS SQL</chip>
-        <chip>NoSQL</chip>
-        <chip>Node.js</chip>
-        <chip>.NET</chip>
-        <chip>Git</chip>
-        <chip>GitHub</chip>
-        <chip>GitLab</chip>
-        <chip>TFS/VSTS</chip>
-        <chip>Agile</chip>
-        <chip>Scrum</chip>
-        <chip>DevOps</chip>
-        <chip>TDD</chip>
-        <chip>CI/CD</chip>
-        <chip>REST</chip>
-        <chip>Flux</chip>
-        <chip>MVC</chip>
-        <chip>Material Design</chip>
-        <chip>Bootstrap</chip>
-        <chip>Angular</chip>
-        <chip>AngularJS</chip>
-        <chip>React</chip>
-        <chip>Redux</chip>
-        <chip>jQuery</chip>
-        <chip>Azure</chip>
-        <chip>Firebase</chip>
+        <alr-chip>C#</alr-chip>
+        <alr-chip>JavaScript</alr-chip>
+        <alr-chip>HTML5</alr-chip>
+        <alr-chip>CSS3</alr-chip>
+        <alr-chip>MS SQL</alr-chip>
+        <alr-chip>NoSQL</alr-chip>
+        <alr-chip>Node.js</alr-chip>
+        <alr-chip>.NET</alr-chip>
+        <alr-chip>Git</alr-chip>
+        <alr-chip>GitHub</alr-chip>
+        <alr-chip>GitLab</alr-chip>
+        <alr-chip>TFS/VSTS</alr-chip>
+        <alr-chip>Agile</alr-chip>
+        <alr-chip>Scrum</alr-chip>
+        <alr-chip>DevOps</alr-chip>
+        <alr-chip>TDD</alr-chip>
+        <alr-chip>CI/CD</alr-chip>
+        <alr-chip>REST</alr-chip>
+        <alr-chip>Flux</alr-chip>
+        <alr-chip>MVC</alr-chip>
+        <alr-chip>Material Design</alr-chip>
+        <alr-chip>Bootstrap</alr-chip>
+        <alr-chip>Angular</alr-chip>
+        <alr-chip>AngularJS</alr-chip>
+        <alr-chip>React</alr-chip>
+        <alr-chip>Redux</alr-chip>
+        <alr-chip>jQuery</alr-chip>
+        <alr-chip>Azure</alr-chip>
+        <alr-chip>Firebase</alr-chip>
 
         <h2>Languages</h2>
 
