feat(card): initial implementation

--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -38,7 +38,7 @@
   <span>(2011 – 2014) in Curitiba, Brazil</span>
 </h3>
 
-<card>
+<alr-card>
   <h2>Skills</h2>
   <alr-chip>C#</alr-chip>
   <alr-chip>JavaScript</alr-chip>
@@ -69,7 +69,9 @@
   <alr-chip>jQuery</alr-chip>
   <alr-chip>Azure</alr-chip>
   <alr-chip>Firebase</alr-chip>
+</alr-card>
 
+<alr-card>
   <h2>Languages</h2>
 
   <flex>
@@ -84,4 +86,4 @@
     <span>Spanish</span>
     <span>Intermediate</span>
   </flex>
-</card>
+</alr-card>
