feat(skills): initial implementation

--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -38,38 +38,7 @@
   <span>(2011 – 2014) in Curitiba, Brazil</span>
 </h3>
 
-<alr-card>
-  <h2>Skills</h2>
-  <alr-chip>C#</alr-chip>
-  <alr-chip>JavaScript</alr-chip>
-  <alr-chip>HTML5</alr-chip>
-  <alr-chip>CSS3</alr-chip>
-  <alr-chip>MS SQL</alr-chip>
-  <alr-chip>NoSQL</alr-chip>
-  <alr-chip>Node.js</alr-chip>
-  <alr-chip>.NET</alr-chip>
-  <alr-chip>Git</alr-chip>
-  <alr-chip>GitHub</alr-chip>
-  <alr-chip>GitLab</alr-chip>
-  <alr-chip>TFS/VSTS</alr-chip>
-  <alr-chip>Agile</alr-chip>
-  <alr-chip>Scrum</alr-chip>
-  <alr-chip>DevOps</alr-chip>
-  <alr-chip>TDD</alr-chip>
-  <alr-chip>CI/CD</alr-chip>
-  <alr-chip>REST</alr-chip>
-  <alr-chip>Flux</alr-chip>
-  <alr-chip>MVC</alr-chip>
-  <alr-chip>Material Design</alr-chip>
-  <alr-chip>Bootstrap</alr-chip>
-  <alr-chip>Angular</alr-chip>
-  <alr-chip>AngularJS</alr-chip>
-  <alr-chip>React</alr-chip>
-  <alr-chip>Redux</alr-chip>
-  <alr-chip>jQuery</alr-chip>
-  <alr-chip>Azure</alr-chip>
-  <alr-chip>Firebase</alr-chip>
-</alr-card>
+<alr-skills></alr-skills>
 
 <alr-card>
   <h2>Languages</h2>
