feat(title): initial implementation

--- a/src/skills/skills.html
+++ b/src/skills/skills.html
@@ -1,5 +1,5 @@
 <alr-card>
-  <h2>Skills</h2>
+  <alr-title color="primary">Skills</alr-title>
   <alr-chip>C#</alr-chip>
   <alr-chip>JavaScript</alr-chip>
   <alr-chip>HTML5</alr-chip>
