feat(languages): initial implementation

--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -34,19 +34,4 @@
 
 <alr-skills></alr-skills>
 
-<alr-card>
-  <h2>Languages</h2>
-
-  <flex>
-    <span>English</span>
-    <span>Fluent</span>
-  </flex>
-  <flex>
-    <span>Portuguese</span>
-    <span>Native</span>
-  </flex>
-  <flex>
-    <span>Spanish</span>
-    <span>Intermediate</span>
-  </flex>
-</alr-card>
+<alr-languages></alr-languages>
