--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -1,37 +1,30 @@
-<h1>Andre Luiz Rabello</h1>
+<main>
+  <h1>Andre Luiz Rabello</h1>
 
-<h2>Experience</h2>
-<h3>
-  <span>SOFTWARE ENGINEER</span>
-  <span>@ EXXONMOBIL</span>
-  <span>December 2016 - Present</span>
-</h3>
-<ul>
-  <li>Design, architecture, engineering, development and support of applications for business teams</li>
-</ul>
+  <h2>Experience</h2>
+  <h3>
+    <span>SOFTWARE ENGINEER</span>
+    <span>@ EXXONMOBIL</span>
+    <span>December 2016 - Present</span>
+  </h3>
+  <ul>
+    <li>Design, architecture, engineering, development and support of applications for business teams</li>
+  </ul>
 
-<h3>
-  <span>SOFTWARE ENGINEER</span>
-  <span>@ FSK</span>
-  <span>March 2015 - December 2016</span>
-</h3>
-<ul>
-  <li>Full-stack design and development of mobile first web applications</li>
-</ul>
+  <h3>
+    <span>SOFTWARE ENGINEER</span>
+    <span>@ FSK</span>
+    <span>March 2015 - December 2016</span>
+  </h3>
+  <ul>
+    <li>Full-stack design and development of mobile first web applications</li>
+  </ul>
 
-<h2>Education</h2>
-<h3>
-  <span>INTERNATIONAL BUSINESS AND MANAGEMENT STUDIES</span>
-  <span>Exchange Student @ Fontys Hogeschool Venlo</span>
-  <span>(2013 – 2014) in Venlo, Netherlands</span>
-</h3>
+  <alr-education></alr-education>
+</main>
 
-<h3>
-  <span>BACHELOR OF BUSINESS ADMINISTRATION (B.B.A)</span>
-  <span>@ Pontifícia Universidade Católica do Paraná / PUC-PR</span>
-  <span>(2011 – 2014) in Curitiba, Brazil</span>
-</h3>
+<aside>
+  <alr-skills></alr-skills>
 
-<alr-skills></alr-skills>
-
-<alr-languages></alr-languages>
+  <alr-languages></alr-languages>
+</aside>
