style: use Raleway as main font

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link async rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link async rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono">
+    <link async rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 
 <body>
