--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -1,24 +1,9 @@
 <main>
-  <h1>Andre Luiz Rabello</h1>
+  <alr-title color="primary">Andre Luiz Rabello</alr-title>
 
-  <h2>Experience</h2>
-  <h3>
-    <span>SOFTWARE ENGINEER</span>
-    <span>@ EXXONMOBIL</span>
-    <span>December 2016 - Present</span>
-  </h3>
-  <ul>
-    <li>Design, architecture, engineering, development and support of applications for business teams</li>
-  </ul>
+  <alr-profile></alr-profile>
 
-  <h3>
-    <span>SOFTWARE ENGINEER</span>
-    <span>@ FSK</span>
-    <span>March 2015 - December 2016</span>
-  </h3>
-  <ul>
-    <li>Full-stack design and development of mobile first web applications</li>
-  </ul>
+  <alr-experience></alr-experience>
 
   <alr-education></alr-education>
 </main>
