--- a/src/education/education.html
+++ b/src/education/education.html
@@ -1,19 +1,23 @@
 <alr-title color="primary">Education</alr-title>
 
 <div>
-  <b>INTERNATIONAL BUSINESS AND MANAGEMENT STUDIES</b>
+  <b>International Business and Management Studies</b>
   <div>Exchange Student @ Fontys Hogeschool Venlo</div>
-  <div>(2013 – 2014) in Venlo, Netherlands</div>
+  <small>(2013 – 2014) in Venlo, Netherlands</small>
 </div>
+<ul>
+  <li>Academic research on management and strategical differences between oil and gas companies around the world</li>
+</ul>
 
 <div>
-  <b>BACHELOR OF BUSINESS ADMINISTRATION (B.B.A)</b>
+  <b>Bachelor of Business Administration (B.B.A)</b>
   <div>@ Pontifícia Universidade Católica do Paraná / PUC-PR</div>
-  <div>(2011 – 2014) in Curitiba, Brazil</div>
-  <ul>
-    <li>Technology Initiation Project (PIBITI) on "Framework development for handhelds to support applications for remote organization
-      management"</li>
-    <li>Business Plan on "Remote data processing server (Cloud Computing)" as the Course Conclusion Project</li>
-    <li>Community Project on a childhood education center</li>
-  </ul>
+  <small>(2011 – 2014) in Curitiba, Brazil</small>
 </div>
+<ul>
+  <li>Technology Initiation Project (PIBITI) on "Framework development for handhelds to support applications for remote organization
+    management"
+  </li>
+  <li>Business Plan on "Remote data processing server (Cloud Computing)" as the Course Conclusion Project</li>
+  <li>Community Project on a childhood education center</li>
+</ul>
