style: screen media styles

--- a/src/education/education.html
+++ b/src/education/education.html
@@ -6,7 +6,7 @@
   <small>(2013 – 2014) in Venlo, Netherlands</small>
 </div>
 <ul>
-  <li>Academic research on management and strategical differences between oil and gas companies around the world</li>
+  <li>Academic research on managerial and strategical differences between oil and gas companies around the world</li>
 </ul>
 
 <div>
