feat(languages): use progress

--- a/src/languages/languages.html
+++ b/src/languages/languages.html
@@ -1,16 +1,19 @@
 <alr-card>
   <alr-title color="primary">Languages</alr-title>
 
-  <div>
+  <div title="Fluent">
     <span>English</span>
-    <span>Fluent</span>
+    <legend>Fluent</legend>
+    <alr-progress amount="80" color="primary"></alr-progress>
   </div>
-  <div>
+  <div title="Native">
     <span>Portuguese</span>
-    <span>Native</span>
+    <legend>Native</legend>
+    <alr-progress amount="100" color="primary"></alr-progress>
   </div>
-  <div>
+  <div title="Professional working proficiency">
     <span>Spanish</span>
-    <span>Intermediate</span>
+    <legend>Intermediate</legend>
+    <alr-progress amount="60" color="primary"></alr-progress>
   </div>
 </alr-card>
