style: print optimization

--- a/src/experience/experience.html
+++ b/src/experience/experience.html
@@ -25,7 +25,7 @@
 </div>
 <ul>
   <li>Single-handedly designed, engineered and developed both the front and back end of a consumer facing Identity Manager
-    (<a href="https://userplus.net">https://userplus.net</a>) - the real meaning of full-stack</li>
+    (<a href="https://userplus.net">userplus.net</a>) - the real meaning of full-stack</li>
   <li>Implemented a full internationalization module (i18n) on a Fortune 500's legacy internal phone billing .NET application</li>
   <li>Developed a compliance module for a Fortune 500's reseller points tracking system</li>
   <li>Created an internal employee clocking app with geolocation and Google Maps integration</li>
