feat(portrait): initial implementation

--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -1,17 +1,20 @@
-<main>
-  <alr-title color="primary">Andre Luiz Rabello</alr-title>
+<alr-card>
+  <alr-portrait></alr-portrait>
+  <main>
+    <alr-title color="primary">Andre Luiz Rabello</alr-title>
 
-  <alr-profile></alr-profile>
+    <alr-profile></alr-profile>
 
-  <alr-experience></alr-experience>
+    <alr-experience></alr-experience>
 
-  <alr-education></alr-education>
-</main>
+    <alr-education></alr-education>
+  </main>
 
-<aside>
-  <alr-contact></alr-contact>
+  <aside>
+    <alr-contact></alr-contact>
 
-  <alr-skills></alr-skills>
+    <alr-skills></alr-skills>
 
-  <alr-languages></alr-languages>
-</aside>
+    <alr-languages></alr-languages>
+  </aside>
+</alr-card>
