chore: production enhancements

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description" content="Andre Luiz Rabello's résumé built with Web Components">
 
-    <link async rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link async rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 
 <body>
