--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -11,13 +11,13 @@
   </a>
 </div>
 <div>
-  <a target="_blank" href="https://linkedin.com/in/andreluizrabello">
+  <a target="_blank" rel="noopener" href="https://linkedin.com/in/andreluizrabello">
     <span>linkedin.com/in/andreluizrabello</span>
     <alr-github></alr-github>
   </a>
 </div>
 <div>
-  <a target="_blank" href="https://github.com/rabelloo">
+  <a target="_blank" rel="noopener" href="https://github.com/rabelloo">
     <span>github.com/rabelloo</span>
     <alr-linkedin></alr-linkedin>
   </a>
