--- a/src/portrait/portrait.html
+++ b/src/portrait/portrait.html
@@ -1,4 +1,4 @@
 <h1>Andre Luiz Rabello</h1>
 <h2>Software Engineer</h2>
-<img src="https://media.licdn.com/dms/image/C4D03AQFC0anPnHTpzQ/profile-displayphoto-shrink_200_200/0?e=1539820800&v=beta&t=eORMrM_Iaa9_Pf0A_AsXrK6MkbVBl5Yomh7V4ozUkUE"
+<img alt="Personal Photo" src="https://media.licdn.com/dms/image/C4D03AQFC0anPnHTpzQ/profile-displayphoto-shrink_200_200/0?e=1539820800&v=beta&t=eORMrM_Iaa9_Pf0A_AsXrK6MkbVBl5Yomh7V4ozUkUE"
 />
