feat(footnote): include on print view

--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -18,4 +18,6 @@
 
     <alr-education></alr-education>
   </main>
+
+  <small class="footnote">View online at: andre-rabello.firebaseapp.com</small>
 </alr-card>
