chore: update phone, experience and packages

--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -5,8 +5,8 @@
   </a>
 </div>
 <div>
-  <a href="tel:+55 (41) 99103 3029">
-    <span>+55 (41) 99103 3029</span>
+  <a href="tel:+48 884 302 915">
+    <span>+48 884 302 915</span>
     <alr-mat-icon>phone</alr-mat-icon>
   </a>
 </div>
