--- a/src/experience/experience.html
+++ b/src/experience/experience.html
@@ -1,8 +1,16 @@
 <alr-title color="primary">Experience</alr-title>
 
 <div class="flex">
+  <span><b>Senior Software Engineer</b> @ Luxoft</span>
+  <small>November 2018 - Present</small>
+</div>
+<ul>
+  <li>Coming soon...</li>
+</ul>
+
+<div class="flex">
   <span><b>Software Engineer</b> @ ExxonMobil</span>
-  <small>December 2016 - Present</small>
+  <small>December 2016 - November 2018</small>
 </div>
 <ul>
   <li>Led the technical side of an agile transformation of a newly formed development squad inside a support team, implementing
@@ -24,7 +32,7 @@
   <small>March 2015 - December 2016</small>
 </div>
 <ul>
-  <li>Single-handedly designed, engineered and developed both the front and back end of a consumer facing Identity Manager
+  <li>Single-handedly designed, engineered and developed both the front and back-end of a consumer facing Identity Manager
     (<a href="https://userplus.net">userplus.net</a>) - the real meaning of full-stack</li>
   <li>Implemented a full internationalization module (i18n) on a Fortune 500's legacy internal phone billing .NET application</li>
   <li>Developed a compliance module for a Fortune 500's reseller points tracking system</li>
