refactor: better html semantics

--- a/src/experience/experience.html
+++ b/src/experience/experience.html
@@ -1,7 +1,7 @@
 <alr-title color="primary">Experience</alr-title>
 
 <div class="flex">
-  <span><b>Senior Software Engineer</b> @ Luxoft</span>
+  <span><h3>Senior Software Engineer</h3> @ Luxoft</span>
   <small>November 2018 - Present</small>
 </div>
 <ul>
@@ -9,7 +9,7 @@
 </ul>
 
 <div class="flex">
-  <span><b>Software Engineer</b> @ ExxonMobil</span>
+  <span><h3>Software Engineer</h3> @ ExxonMobil</span>
   <small>December 2016 - November 2018</small>
 </div>
 <ul>
@@ -28,7 +28,7 @@
 </ul>
 
 <div class="flex">
-  <span><b>Software Developer</b> @ FSK</span>
+  <span><h3>Software Developer</h3> @ FSK</span>
   <small>March 2015 - December 2016</small>
 </div>
 <ul>
