chore: update experience

--- a/src/experience/experience.html
+++ b/src/experience/experience.html
@@ -5,7 +5,7 @@
   <small>November 2018 - Present</small>
 </div>
 <ul>
-  <li>Coming soon...</li>
+  <li>Designed and developed the UI of a financial web app for a Fortune 500 company</li>
 </ul>
 
 <div class="flex">
