--- a/src/experience/experience.html
+++ b/src/experience/experience.html
@@ -17,7 +17,7 @@
     DevOps processes and tools</li>
   <li>Launched and managed an internal open source Angular adaptation library for the company's internal Design framework as
     the main contributor</li>
-  <li>Developed a PWA for dynamic and elastic data submission and storage, starting from an internal hackaton, with first use
+  <li>Developed a PWA for dynamic and elastic data submission and storage, starting from an internal hackathon, with first use
     case of turnaround improvements that saves ~$1.5m per event</li>
   <li>Constantly shared knowledge and led sessions on tech, languages and tools for new interns and the developer community as
     a best practices champion</li>
