chore: update experience and skills

--- a/src/experience/experience.html
+++ b/src/experience/experience.html
@@ -1,8 +1,16 @@
 <alr-title color="primary">Experience</alr-title>
 
 <div class="flex">
+  <span><h3>Senior Software Engineer</h3> @ Onfido</span>
+  <small>Lisbon, Portugal | Sep 2019 - Present</small>
+</div>
+<ul>
+  <li>Working on tools for digital identity - document processing, facial checks, task queueing</li>
+</ul>
+
+<div class="flex">
   <span><h3>Senior Software Engineer</h3> @ Luxoft</span>
-  <small>November 2018 - Present</small>
+  <small>Krakow, Poland | Nov 2018 - Jul 2019</small>
 </div>
 <ul>
   <li>Designed and developed the UI of a financial web app for a Fortune 500 company</li>
@@ -10,7 +18,7 @@
 
 <div class="flex">
   <span><h3>Software Engineer</h3> @ ExxonMobil</span>
-  <small>December 2016 - November 2018</small>
+  <small>Curitiba, Brazil | Dec 2016 - Nov 2018</small>
 </div>
 <ul>
   <li>Led the technical side of an agile transformation of a newly formed development squad inside a support team, implementing
@@ -29,7 +37,7 @@
 
 <div class="flex">
   <span><h3>Software Developer</h3> @ FSK</span>
-  <small>March 2015 - December 2016</small>
+  <small>Curitiba, Brazil | Mar 2015 - Dec 2016</small>
 </div>
 <ul>
   <li>Single-handedly designed, engineered and developed both the front and back-end of a consumer facing Identity Manager
