--- a/src/skills/skills.html
+++ b/src/skills/skills.html
@@ -1,8 +1,8 @@
 <alr-card>
   <alr-title color="primary">Skills</alr-title>
   <alr-chip>JavaScript</alr-chip>
-  <alr-chip>Angular</alr-chip>
   <alr-chip>React</alr-chip>
+  <alr-chip>Angular</alr-chip>
 
   <alr-chip>TypeScript</alr-chip>
   <alr-chip>Redux</alr-chip>
@@ -13,6 +13,7 @@
   <alr-chip>CSS3</alr-chip>
   <alr-chip>Sass</alr-chip>
   <alr-chip>Less</alr-chip>
+  <alr-chip>CSS-in-JS</alr-chip>
 
   <alr-chip>GraphQL</alr-chip>
   <alr-chip>Webpack</alr-chip>
