chore: remove phone contact

--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -5,19 +5,17 @@
   </a>
 </div>
 <div>
-  <a href="tel:+48 884 302 915">
-    <span>+48 884 302 915</span>
-    <alr-mat-icon>phone</alr-mat-icon>
-  </a>
-</div>
-<div>
   <a target="_blank" rel="noopener" href="https://github.com/rabelloo">
     <span>github.com/rabelloo</span>
     <alr-github></alr-github>
   </a>
 </div>
 <div>
-  <a target="_blank" rel="noopener" href="https://linkedin.com/in/andreluizrabello">
+  <a
+    target="_blank"
+    rel="noopener"
+    href="https://linkedin.com/in/andreluizrabello"
+  >
     <span>linkedin.com/in/andreluizrabello</span>
     <alr-linkedin></alr-linkedin>
   </a>
