chore: update education and print url

--- a/src/education/education.html
+++ b/src/education/education.html
@@ -6,7 +6,10 @@
   <small>(2013 – 2014) in Venlo, Netherlands</small>
 </div>
 <ul>
-  <li>Academic research on managerial and strategical differences between oil and gas companies around the world</li>
+  <li>
+    Academic research on managerial and strategical differences between oil and
+    gas companies around the world
+  </li>
 </ul>
 
 <div>
@@ -15,9 +18,12 @@
   <small>(2011 – 2014) in Curitiba, Brazil</small>
 </div>
 <ul>
-  <li>Technology Initiation Project (PIBITI) on "Framework development for handhelds to support applications for remote organization
-    management"
+  <li>
+    Technology Initiation Project (PIBITI) on "Framework development for
+    handhelds to support applications for remote organization management"
   </li>
-  <li>Business Plan on "Remote data processing server (Cloud Computing)" as the Course Conclusion Project</li>
-  <li>Community Project on a childhood education center</li>
+  <li>
+    Business Plan on "Remote data processing server (Cloud Computing)" as the
+    Course Conclusion Project
+  </li>
 </ul>
