--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -19,5 +19,5 @@
     <alr-education></alr-education>
   </main>
 
-  <small class="footnote">View online at: andre-rabello.firebaseapp.com</small>
+  <small class="footnote">View online at: andre-rabello.web.app</small>
 </alr-card>
